fixed height on mobile

--- a/public/asset/css/style.css
+++ b/public/asset/css/style.css
@@ -1173,7 +1173,7 @@ span.badge {
 	}
 
 	.chatbox-wrapper {
-		height: 300px;
+		height: 600px;
 	}
 
 	.chatbox-wrapper .container {
